deploy/securedns-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        k8s-app: securedns
    name: securedns
    namespace: default
spec:
    replicas: 1
    selector:
        matchLabels:
            k8s-app: securedns
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
        type: RollingUpdate
    template:
        metadata:
            labels:
                k8s-app: securedns
                name: securedns
                blinkt: show
        spec:
            containers:
            - image: diginc/pi-hole-multiarch:debian_armhf
              name: pihole
              imagePullPolicy: Always
              ports:
              - containerPort: 53
                protocol: UDP
              - containerPort: 80
                protocol: TCP
              volumeMounts:
              - name: securedns-config
                mountPath: /etc/dnsmasq.d/01-pihole.conf
                subPath: 01-pihole.conf
              - name: securedns-config
                mountPath: /etc/lighttpd/external.conf
                subPath: external.conf
            - name: cloudflared
              image: frodehus/cloudflared:v1
              imagePullPolicy: Always
            volumes:
            - name: securedns-config
              configMap:
                name: securedns-conf
            restartPolicy: Always
