deploy/securedns-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: securednslb
  labels:
    k8s-app: securedns
spec:
  ports:
    - port: 53
      name: dns
      protocol: UDP
  selector:
    k8s-app: securedns
  type: LoadBalancer
