deploy/securedns-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: securedns
  labels:
    k8s-app: securedns
spec:
  ports:
    - port: 80
      name: web
    - port: 9100
      name: metrics
    - port: 53
      name: dns
      protocol: UDP
  selector:
    k8s-app: securedns
  type: NodePort
