deploy/securedns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pihole
  namespace: default
  labels:
    k8s-app: securedns
  annotations:
    kubernetes.io/tls-acme: "true"
    traefik.frontend.redirect.entryPoint: https
    traefik.frontend.redirect.regex: ^http://(.*)
    traefik.frontend.redirect.replacement: https://$1
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: securedns-webauth
spec:
  tls:
  - hosts:
      - securedns.pepperprovesapoint.com
  rules:
  - host: securedns.pepperprovesapoint.com
    http:
      paths:
      - path: /
        backend:
          serviceName: securedns
          servicePort: 80
